Fixed navigation mobile CSS issues

--- a/css/navigation.css
+++ b/css/navigation.css
@@ -1,55 +1,91 @@
 :root {
-    --primary-text-color: #eee;
-    --background-color: linear-gradient(0deg, rgb(6, 5, 21) 50%, rgb(86, 0, 167) 120%);
+  --primary-text-color: #eee;
+  --background-color: linear-gradient(0deg, rgb(6, 5, 21) 50%, rgb(86, 0, 167) 120%);
 
-    --primary-font-family: "K2D-Regular";
-    --secondary-font-family: "K2D-SemiBold";
-    --boldest-font-family: "K2D-Bold";
-  
-    --spacing-small: 8px;
-    --spacing-main: 16px;
-    --spacing-large: 36px;
-  }
+  --primary-font-family: "K2D-Regular";
+  --secondary-font-family: "K2D-SemiBold";
+  --boldest-font-family: "K2D-Bold";
 
- 
-header {
-    color: var(--primary-text-color);
-    display: flex;
-    grid-template-columns: 1fr 1.2fr 0.5fr;
-    justify-content: space-between;
-    margin:0;
-    padding: var(--spacing-small);
+  --spacing-small: 8px;
+  --spacing-main: 16px;
+  --spacing-large: 36px;
 }
-  
+
+header {
+  color: var(--primary-text-color);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0;
+  padding: var(--spacing-small);
+  position: relative;
+  z-index: 10;
+}
+
 nav ul {
-    cursor: pointer;
-    display: none;
-    list-style-type: none;
-    top: 0;
+  cursor: pointer;
+  display: none;
+  list-style-type: none;
+  top: 100%;
+  left: 0;
+  background-color: rgba(6, 5, 21, 0.9);
+  padding: var(--spacing-small);
+  position: absolute;
+}
+.submenu {
+  position: absolute;
+  left: 100%;
+  top: 0;
+  display: none;
+  z-index: 11;
+}
+
+.submenu-2 {
+  position: absolute;
+  top: 0;
+  left: 100%;
+  background-color: rgba(6, 5, 21, 0.9);
+  padding: var(--spacing-small);
+  display: none;
+  z-index: 12;
+}
+
+.submenu-3 {
+  position: absolute;
+  top: 0;
+  left: 100%;
+  background-color: rgba(6, 5, 21, 0.9);
+  padding: var(--spacing-small);
+  display: none;
+  z-index: 13;
 }
 
 .submenu li {
-    padding-left: var(--spacing-main);
+  padding-left: var(--spacing-main);
 }
 .hamburger-menu {
-    height: 50px;
-    width: 50px;
+  height: 50px;
+  width: 50px;
 }
 
 .logo-mobile {
-    height: 55px;
-    width: 55px;
+  position: relative;
+  height: 55px;
+  width: 55px;
 }
 
 /* ----- Navlink ----*/
 nav {
   font-family: "K2D-Regular";
-
 }
 
-nav a{
-  color:#fff;
+nav a {
+  color: #fff;
   font-family: "K2D-Regular";
+}
+
+nav ul li:hover {
+  background-color: rgba(255, 255, 255, 0.676);
 }
 
 a:link {
@@ -60,53 +96,59 @@ a:hover {
   background-color: transparent;
   text-decoration: underline;
 }
-  
-  @media screen and (min-width: 991px) {
-    header {  
-        display: block;
-        margin-right: var(--spacing-large);
-        margin-left: var(--spacing-large);
-    }
 
-    nav .hamburger-menu {
-      display: none;
-    }
-
-    .logo-mobile {
-        display: none;
-    }
-  
-    nav > ul {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-around;
-      list-style-type: none;
-    }
-  
-    nav > ul > li {
-      
-      cursor: pointer;
-      padding: var(--spacing-small) var(--spacing-main);
-      
-    }
-    .submenu li {
-        padding-left: none;
-    }
-  
-    /*---- Navlinks---*/
-
-    nav a{
-      color:#fff;
-    }
-    
-    a:link {
-      text-decoration: none;
-    }
-    
-    a:hover {
-      background-color: transparent;
-      text-decoration: underline;
-    }
-
+@media screen and (min-width: 991px) {
+  header {
+    display: block;
+    margin-right: var(--spacing-large);
+    margin-left: var(--spacing-large);
   }
-  
+
+  nav .hamburger-menu {
+    display: none;
+  }
+
+  .logo-mobile {
+    display: none;
+  }
+
+  nav > ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    list-style-type: none;
+    position: relative;
+  }
+
+  nav > ul > li {
+    cursor: pointer;
+    padding: var(--spacing-small) var(--spacing-main);
+    position: relative;
+  }
+  .submenu li {
+    padding-left: none;
+  }
+
+  .submenu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: rgba(6, 5, 21, 0.9);
+    padding: var(--spacing-small);
+  }
+
+  /*---- Navlinks---*/
+
+  nav a {
+    color: #fff;
+  }
+
+  a:link {
+    text-decoration: none;
+  }
+
+  a:hover {
+    background-color: transparent;
+    text-decoration: underline;
+  }
+}
